removed print functions from care-plan pages and put into a single behavior file. linked su-print-behavior to all care-plan pages.

--- a/src/pages/care-plan/su-care/dependencies.html
+++ b/src/pages/care-plan/su-care/dependencies.html
@@ -19,5 +19,6 @@
 <link rel="import" href="../../../elements/guuey-signature/guuey-signature.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+<link rel="import" href="../../../behaviors/su-print-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
