--- a/src/pages/care-plan/su-medication/dependencies.html
+++ b/src/pages/care-plan/su-medication/dependencies.html
@@ -24,5 +24,6 @@
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+<link rel="import" href="../../../behaviors/su-print-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
