--- a/src/pages/care-plan/su-pre/dependencies.html
+++ b/src/pages/care-plan/su-pre/dependencies.html
@@ -14,5 +14,6 @@
 <link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+<link rel="import" href="../../../behaviors/su-print-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
