--- a/src/pages/care-plan/su-medical/dependencies.html
+++ b/src/pages/care-plan/su-medical/dependencies.html
@@ -11,5 +11,6 @@
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+<link rel="import" href="../../../behaviors/su-print-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
