--- a/src/pages/care-plan/su-profile/dependencies.html
+++ b/src/pages/care-plan/su-profile/dependencies.html
@@ -15,5 +15,6 @@
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+<link rel="import" href="../../../behaviors/su-print-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
