--- a/src/pages/care-plan/su-risk/su-risk.html
+++ b/src/pages/care-plan/su-risk/su-risk.html
@@ -367,7 +367,8 @@
       ],
       behaviors:[
         Polymer.fabAnimationBehavior,
-        Polymer.carePlanAnimation
+        Polymer.carePlanAnimation,
+        Polymer.suPrintBehavior
       ],
       toggleEditModal:function(e){
         this.$.editModal.positionTarget = e.target;
@@ -458,50 +459,6 @@
           this.queryCount=0;
         };
         this.queryCount++;
-      },
-      print:function(e){
-        var printable=window.open("","printable");
-        printable.document.write("<html><head>");
-        printable.document.write("</head><body>");
-        printable.document.write("<div style='width:100% padding:5%;'>");
-        var printData=this.$.printDB.data;
-        for(x in printData){
-          var assmt=printData[x];
-          printable.document.write("<p style='font-weight:bold;'>"+assmt.date.slice(0,15)+"</p>");
-          for(y in assmt){
-            var subAssmt=assmt[y];
-            if(y!="date"){
-              printable.document.write("<p>"+this.convertToPrintText(y)+": "+subAssmt.info+"</p>");
-            };
-          };
-        };
-        printable.document.write("</body></html>");
-        printable.document.write("</div>");
-        printable.print();
-        printable.close();
-
-      },
-      convertToPrintText:function(camelCase){
-        if (camelCase == null || camelCase == "") {
-          return camelCase;
-        }
-
-        camelCase = camelCase.trim();
-        var newText = "";
-        for (var i = 0; i < camelCase.length; i++) {
-          if (/[A-Z]/.test(camelCase[i])
-              && i != 0
-              && /[a-z]/.test(camelCase[i-1])) {
-            newText += " ";
-          }
-          if (i == 0 && /[a-z]/.test(camelCase[i]))
-          {
-            newText += camelCase[i].toUpperCase();
-          } else {
-            newText += camelCase[i];
-          }
-        }
-        return newText;
       },
       requirementsMet:function(data){
         //change case
