--- a/src/behaviors/su-resize-behavior.html
+++ b/src/behaviors/su-resize-behavior.html
@@ -6,8 +6,36 @@
     'use-strict';
     Polymer.suResizeBehaviorImp={
 
-      is:"su-resize-behavior"
+      is:"su-resize-behavior",
+      attached:function(){
+        if(this.page==="su-care"){
 
+        };
+        if(this.page==="su-care-review"){
+
+        };
+        if(this.page==="su-create"){
+
+        };
+        if(this.page==="su-goals"){
+
+        };
+        if(this.page==="su-medical"){
+
+        };
+        if(this.page==="su-medication"){
+
+        };
+        if(this.page==="su-pre"){
+
+        };
+        if(this.page==="su-profile"){
+
+        };
+        if(this.page==="su-risk"){
+
+        };
+      }
     };
     Polymer.suResizeBehavior={
       Polymer.suResizeBehaviorImp
