--- a/src/pages/care-plan/su-care/dependencies.html
+++ b/src/pages/care-plan/su-care/dependencies.html
@@ -17,6 +17,7 @@
 <link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
 <link rel="import" href="../../../elements/guuey-table/guuey-table.html" />
 <link rel="import" href="../../../elements/guuey-signature/guuey-signature.html" />
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
 <link rel="import" href="../../../behaviors/su-print-behavior.html" />
