--- a/src/elements/media-queries/media-queries.html
+++ b/src/elements/media-queries/media-queries.html
@@ -9,35 +9,33 @@
 
 <dom-module id="media-queries">
 
-  <iron-media-query
-    query="(max-width:640px)"
-    query-matches="{{dimensions.query640}}">
-  </iron-media-query>
-
-  <iron-media-query
-    query="max-width:900px"
-    query-matches="{{dimensions.query900}}">
-  </iron-media-query>
-
-  <iron-media-query
-    query="max-width:750px"
-    query-matches="{{dimensions.query750}}">
-  </iron-media-query>
-
-  <iron-media-query
-    query="max-width:1100px"
-    query-matches="{{dimensions.query1100}}">
-  </iron-media-query>
-
-  <style>
-
-
-
-  </style>
-
   <template>
 
+    <iron-media-query
+      query="(max-width:640px)"
+      query-matches="{{dimensions.query640}}">
+    </iron-media-query>
 
+    <iron-media-query
+      query="max-width:900px"
+      query-matches="{{dimensions.query900}}">
+    </iron-media-query>
+
+    <iron-media-query
+      query="max-width:750px"
+      query-matches="{{dimensions.query750}}">
+    </iron-media-query>
+
+    <iron-media-query
+      query="max-width:1100px"
+      query-matches="{{dimensions.query1100}}">
+    </iron-media-query>
+
+    <style>
+
+
+
+    </style>
 
   </template>
 
@@ -53,3 +51,4 @@
         }
       }
     })
+  </script>
