--- a/src/pages/care-plan/su-care/dependencies.html
+++ b/src/pages/care-plan/su-care/dependencies.html
@@ -21,5 +21,6 @@
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
 <link rel="import" href="../../../behaviors/su-print-behavior.html" />
+<link rel="import" href="../../../behaviors/su-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
